# charon-byzantine-partition

./: CMakeLists.txt  LICENSE  README.md
docker/: docker-compose.yml
docker/node/: Dockerfile
simulations/scenarios/: CharonNetwork.ned  omnetpp.ini
src/charon/: CharonNodeModule.cpp  CharonNodeModule.h  messages.h  node.cpp  node.h  serialization.h
src/crypto/: crypto.cpp  crypto.h
src/topology/: RippleLoader.cpp  RippleLoader.h  generate_ripple_ned.cpp
